faq bugix was not clickable beacuse of answer overflow

--- a/styles.scss
+++ b/styles.scss
@@ -233,6 +233,8 @@ body {
                     height: 0;
                     opacity: 0;
                     padding: 0px 1.5rem;
+                    position: relative;
+                    z-index: -1;
                     transition: 0.7s ease;
                 }
 
